@@ -1,3 +1,12 @@
+2007-11-17 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic.rb: Display useful warnings when optional dependencies are
+    missing.
+    * lib/fantasdic/ui.rb: Ditto.
+    * lib/fantasdic/gettext.rb: Ditto.
+    * lib/fantasdic/ui/browser.rb: Ditto.
+    * lib/fantasdic/utils.rb: Added Symbol#to_proc.
+
 2007-11-06 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/ui/main_app.rb (on_print_setup): Was not passing the right
